syntax = "proto3";

option go_package = "github.com/lolasudo/golink-p2p/practice-4/api";

package api;

message RollDieRequest {}

message RollDieResponse {
  int32 value = 1;
}

service DiceService {
  rpc RollDie (RollDieRequest) returns (RollDieResponse) {}
}


